Avoid horizontal scroll in dropdown menu (#189)

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -189,7 +189,7 @@ header nav.nav-bottom .menu-level-1-item:first-of-type>a::after {
 /* stylelint-disable-next-line no-descending-specificity */
 header nav.nav-bottom .menu-level-1-item>.dropdown-menu {
   display: none;
-  width: 100vw;
+  width: 100%;
   height: 30rem;
   position: absolute;
   top: 0;
